--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 									<li class="d-flex"><span>Domain:</span> <span>Transport, Digital Marketing, Healthcare &amp; Information Technology</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
-									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, MS SQL Server Reporting Services &amp; Excel</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>MS SQL, PostgreSQL, Oracle, MongoDB, Power Query,Cloud, Excel, Git, JIRA,  &amp; Agile</span></li>
+									<li class="d-flex"><span>Data Visualization Tools:</span> <span>Microsoft Power BI, MS SQL Server Reporting Services &amp; Excel</span></li>
+									<li class="d-flex"><span>Data Engineering Tools:</span> <span>MS SQL, PostgreSQL, Oracle, MongoDB, Power Query, ETL, Azure, AWS, Excel, Git, JIRA,  &amp; Agile</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography, Teaching</span></li>
 									
 								</ul>
