--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://docs.google.com/document/d/1ClEfiYzSiPdaBA4eYQqjxujimn5vmy5C/edit?usp=sharing&ouid=112953634456989030755&rtpof=true&sd=true" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1PjGxh44Vh8UvEsIwxLy7D_vRwMn1DABj/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
